@@ -18,6 +18,8 @@
    in case of changing slice/project membershop (#1242)
  # Fix bug that doesn't allow GRAM resources to turn green due to PHP fatal 
    error  around GENI_PENDING scope (#1243).
+ # Make the downloaded request and manifest rspec be named with the slice: 
+   <slicename>_<rspec_type>_rspec.xml (#1205).
 
 == 2.22 ==
  * Include link to NYU Poly WITest wireless site. (#773)
